--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             />
             <p class="base-message"></p>
           </div>
-          <button class="base-submit-btn"><img src="images/icon-arrow.svg" alt="icon-arrow" /></button>
+          <button class="base-submit-btn">
+            <img src="images/icon-arrow.svg" alt="icon-arrow" />
+          </button>
         </form>
       </div>
     </div>
-    <div class="base-apparel-image">
-      <img src="images/hero-desktop.jpg" alt="" />
-    </div>
+    <div class="base-apparel-image"></div>
   </body>
 </html>
