--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
       </div>
     </div>
     <div class="base-apparel-image"></div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="index.js"></script>
   </body>
 </html>
