Fixed design errors

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <section class="base-apparel-coming-soon">
-      <div class="base-apparel-coming-soon-master">
-        <div class="base-apparel-logo">
+    <header class="base-apparel-coming-soon">
+      <section class="base-apparel-coming-soon-master">
+        <article class="base-apparel-logo">
           <img src="images/logo.svg" alt="logo" />
-        </div>
-        <div class="base-apparel-content">
+        </article>
+        <article class="base-apparel-content">
           <h1 class="base-apparel-heading"><span>We're</span> coming soon</h1>
           <p class="base-apparel-paragraph">
             Hello fellow shoppers! We're currently building our new fashion
@@ -36,7 +36,7 @@
             and our launch deals.
           </p>
           <form action="#" class="base-apparel-form">
-            <div class="base-form-group">
+            <article class="base-form-group">
               <input
                 type="email"
                 name="email"
@@ -49,15 +49,15 @@
                 class="icon-error"
               />
               <p class="base-message"></p>
-            </div>
+            </article>
             <button class="base-submit-btn">
               <img src="images/icon-arrow.svg" alt="icon-arrow" />
             </button>
           </form>
-        </div>
-      </div>
-      <div class="base-apparel-image"></div>
-    </section>
+        </article>
+      </section>
+      <section class="base-apparel-image"></section>
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="index.js"></script>
   </body>
